fixed hero layout problem at hero's cta

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@
 }
 
 @utility nav-height {
-  height: calc(100vh - 60px);
+  height: calc(100dvh - 60px);
 }
 
 @utility btn {
